--- a/src/MContact/style.css
+++ b/src/MContact/style.css
@@ -2,24 +2,15 @@
     -fx-text-fill: white;
 }
 
-.test {
+.threadWindow {
     -fx-background-color: #1d1d1d;
     -fx-stroke: green;
-    /*-fx-stroke-width: 5;*/
-    /*-fx-stroke-dash-array: 12 2 4 2;*/
-    /*-fx-stroke-dash-offset: 6;*/
-    /*-fx-stroke-line-cap: butt;*/
 }
 
-.test2 {
+.threadPane {
     -fx-background: #434343;
-    -fx-background-color: #1d1d1d;
     -fx-border-color: green;
     -fx-border-width: 1px;
-    /*-fx-stroke-width: 5;*/
-    /*-fx-stroke-dash-array: 12 2 4 2;*/
-    /*-fx-stroke-dash-offset: 6;*/
-    /*-fx-stroke-line-cap: butt;*/
 }
 
 .user_msg {
