--- a/src/MContact/MainView.fxml
+++ b/src/MContact/MainView.fxml
@@ -23,8 +23,8 @@
       <Label fx:id="nameLabel" prefHeight="19.0" prefWidth="350.0" styleClass="nameLabel" stylesheets="@MainStyle.css" text="Hello John!" GridPane.columnSpan="4" />
       <Label fx:id="portLabel" prefHeight="19.0" prefWidth="350.0" styleClass="portLabel" stylesheets="@MainStyle.css" text="You are listening on port 8420" GridPane.columnSpan="4" GridPane.rowIndex="1" />
       <Button fx:id="connectButton" mnemonicParsing="false" styleClass="mainButton" stylesheets="@MainStyle.css" text="Connect" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <Button mnemonicParsing="false" styleClass="mainButton" stylesheets="@MainStyle.css" text="Change port" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <Button mnemonicParsing="false" styleClass="mainButton" stylesheets="@MainStyle.css" text="Change name" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+      <Button fx:id="changePortButton" mnemonicParsing="false" styleClass="mainButton" stylesheets="@MainStyle.css" text="Change port" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+      <Button fx:id="changeNameButton" mnemonicParsing="false" styleClass="mainButton" stylesheets="@MainStyle.css" text="Change name" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
       <Button fx:id="exitButton" mnemonicParsing="false" styleClass="mainButton" stylesheets="@MainStyle.css" text="Exit" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
    </children>
    <padding>
