--- a/src/MContact/ThreadView.fxml
+++ b/src/MContact/ThreadView.fxml
@@ -14,7 +14,7 @@
          <children>
             <!--<Button mnemonicParsing="false" onAction="#Server0" text="Server" />-->
             <!--<Button mnemonicParsing="false" onAction="#Connect0" text="Client" />-->
-            <Button fx:id="button1" mnemonicParsing="false" text="Button" />
+            <Button fx:id="detailsButton" mnemonicParsing="false" text="Details" />
             <Button mnemonicParsing="false" text="Button" />
          </children>
       </HBox>
